--- a/CaisseGenclik/Views/CaisseView.xaml
+++ b/CaisseGenclik/Views/CaisseView.xaml
@@ -1,58 +1,49 @@
-﻿<Window x:Class="CaisseGenclik.Views.CaisseView"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="clr-namespace:CaisseGenclik.ViewModels" xmlns:Models="clr-namespace:CaisseGenclik.Models" x:Class="CaisseGenclik.Views.CaisseView"
+        d:DataContext="{d:DesignInstance Type={x:Type viewmodels:CaisseViewModel}}"
         mc:Ignorable="d"
-        xmlns:vm="clr-namespace:CaisseGenclik.ViewModels" 
-        xmlns:uc="clr-namespace:CaisseGenclik.Views.UserControls"
         Title="CaisseView" Height="900" Width="1100">
-
     <Window.DataContext>
-        <vm:CaisseViewModel/>
+        <viewmodels:CaisseViewModel>
+            <viewmodels:CaisseViewModel.SelectedArticle>
+                <Models:Article/>
+            </viewmodels:CaisseViewModel.SelectedArticle>
+        </viewmodels:CaisseViewModel>
     </Window.DataContext>
-    <Grid>
+    <Grid Height="884" VerticalAlignment="Bottom">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <!-- Première colonne d'articles -->
-        <ItemsControl Grid.Column="0">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Vertical" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
+        <ListBox x:Name="list" ItemsSource="{Binding ArticlesPanier}" SelectedItem="{Binding SelectedArticle}" d:ItemsSource="{d:SampleData ItemCount=5}">
+            <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <uc:ItemArticle/>
+                    <Border BorderBrush="Black" BorderThickness="1" Margin="5">
+                        <StackPanel>
+                            <TextBlock Text="{Binding Nom}" FontWeight="Bold"/>
+                            <Image Source="{Binding ImagePath}" Height="100" Width="100"/>
+                            <TextBlock Text="{Binding Prix, StringFormat=\{0\} €}" HorizontalAlignment="Right"/>
+                            <!--<Button Command="{Binding cmdSearch}" CommandParameter="{Binding Text,ElementName=searchText}" Content="Rechercher" Name="Search" HorizontalAlignment="Left" Margin="542,105,0,0" VerticalAlignment="Top"/>-->
+                            <Button x:Name="btAdd" Content="Ajouter" Command="{Binding AjouterCommand, Mode=OneWay}"  Width="100" CommandParameter="{Binding SelectedArticle}" >
+                                <Button.DataContext>
+                                    <viewmodels:CaisseViewModel/>
+                                </Button.DataContext>
+                            </Button>
+                            <Button x:Name="btRemove" Content="Retirer" Command="{Binding RetirerCommand}"  Width="100" CommandParameter="{Binding SelectedArticle}" >
+                                <Button.DataContext>
+                                    <viewmodels:CaisseViewModel/>
+                                </Button.DataContext>
+                            </Button>
+                        </StackPanel>
+                    </Border>
                 </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <!-- Articles de test -->
-            <uc:ItemArticle/>
-            <uc:ItemArticle/>
-            <uc:ItemArticle/>
-        </ItemsControl>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
-        <!-- Deuxième colonne d'articles -->
-        <ItemsControl Grid.Column="1">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel Orientation="Vertical" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <uc:ItemArticle/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <!-- Articles de test -->
-            <uc:ItemArticle/>
-            <uc:ItemArticle/>
-            <uc:ItemArticle/>
-        </ItemsControl>
-        <!-- Affichage du total du panier -->
         <TextBlock Grid.Column="1" Text="{Binding SoldePanier}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10"/>
     </Grid>
 </Window>
