--- a/CaisseGenclik/Views/ConnexionView.xaml
+++ b/CaisseGenclik/Views/ConnexionView.xaml
@@ -10,6 +10,9 @@
     <Window.DataContext>
         <local:ConnexionViewModel/>
     </Window.DataContext>
+    <Window.InputBindings>
+        <KeyBinding Key="Enter" Command="{Binding ConnexionCommand}" />
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="423*"/>
@@ -25,7 +28,7 @@
             <TextBlock Text="Mot de passe:" />
             <TextBox Text="{Binding MotDePasse}" Width="200" />
 
-            <Button Content="Connexion" Command="{Binding ConnexionCommand}" Width="100" />
+            <Button Content="Connexion" Command="{Binding ConnexionCommand}" Width="100" IsDefault="True"/>
         </StackPanel>
         <!-- Bouton À propos -->
         <Button Content="À propos" Style="{StaticResource AboutButtonStyle}" Click="AboutButton_Click" Margin="0,0,10,9" Grid.RowSpan="2"/>
